get panel group data
