# controller/dashboard.go
@@ -1,0 +1,63 @@
+package controller
+
+import (
+	"github.com/e421083458/golang_common/lib"
+	"github.com/gin-gonic/gin"
+	"go_gateway_demo/dao"
+	"go_gateway_demo/dto"
+	"go_gateway_demo/middleware"
+	"go_gateway_demo/public"
+)
+
+type DashboardController struct{}
+
+func DashboardRegister(group *gin.RouterGroup) {
+	service := &DashboardController{}
+	group.GET("/panel_group_data", service.PanelGroupData)
+	//group.GET("/flow_stat", service.FlowStat)
+	//group.GET("/service_stat", service.ServiceStat)
+}
+
+// PanelGroupData godoc
+// @Summary 指标统计
+// @Description 指标统计
+// @Tags 首页大盘
+// @ID /dashboard/panel_group_data
+// @Accept  json
+// @Produce  json
+// @Success 200 {object} middleware.Response{data=dto.PanelGroupDataOutput} "success"
+// @Router /dashboard/panel_group_data [get]
+func (service *DashboardController) PanelGroupData(c *gin.Context) {
+	tx, err := lib.GetGormPool("default")
+	if err != nil {
+		middleware.ResponseError(c, 2001, err)
+		return
+	}
+
+	serviceInfo := &dao.ServiceInfo{}
+	// serviceNum 为service总数
+	_, serviceNum, err := serviceInfo.PageList(c, tx, &dto.ServiceListInput{PageSize: 1, PageNo: 1})
+	if err != nil {
+		middleware.ResponseError(c, 2002, err)
+		return
+	}
+	app := &dao.App{}
+	// appNum 为app总数
+	_, appNum, err := app.APPList(c, tx, &dto.APPListInput{PageNo: 1, PageSize: 1})
+	if err != nil {
+		middleware.ResponseError(c, 2003, err)
+		return
+	}
+	counter, err := public.FlowCounterHandler.GetCounter(public.FlowTotal)
+	if err != nil {
+		middleware.ResponseError(c, 2003, err)
+		return
+	}
+	out := &dto.PanelGroupDataOutput{
+		ServiceNum:      serviceNum,
+		AppNum:          appNum,
+		TodayRequestNum: counter.TotalCount,
+		CurrentQPS:      counter.QPS,
+	}
+	middleware.ResponseSuccess(c, out)
+}
